--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -13,13 +13,13 @@
             android:background="#ffa500">
 
         <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/dlg_workout_name"
                 android:id="@+id/textView2"
                 android:gravity="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 />
