--- a/res/layout/workout.xml
+++ b/res/layout/workout.xml
@@ -17,7 +17,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:id="@+id/textView"
-                    android:text="@string/exercise_name"
+                    android:text="@string/workout_name"
                     android:layout_gravity="start|center_vertical"
                     android:textColor="#ffffff"
                     android:textSize="30sp"
@@ -51,7 +51,8 @@
                     android:layout_gravity="end|bottom"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
-                    android:textSize="50sp"/>
+                    android:textSize="50sp"
+                    android:onClick="finishTraining"/>
 
             <ImageButton
                     android:layout_width="wrap_content"
