--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -13,6 +13,7 @@
             android:background="#ffa500">
 
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
