--- a/res/layout/dialog_finish_training.xml
+++ b/res/layout/dialog_finish_training.xml
@@ -13,6 +13,7 @@
             android:background="#ffa500">
 
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
