--- a/res/layout/exercise_info.xml
+++ b/res/layout/exercise_info.xml
@@ -7,17 +7,17 @@
               android:background="@color/light_gray_1">
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/title"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30sp"
                 android:text="@string/exercise_info"
                 android:layout_marginStart="20dp"/>
     </FrameLayout>
