--- a/res/layout/exercises_full_list_list_item.xml
+++ b/res/layout/exercises_full_list_list_item.xml
@@ -4,15 +4,16 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:descendantFocusability="blocksDescendants"
         >
 
     <TextView
+            android:theme="@style/TextTheme"
             android:id="@+id/listItem"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -20,10 +21,10 @@
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
             android:text="@string/exercise_name"
-            android:textSize="20sp"
+            android:minLines="2"
+            android:maxLines="2"
             android:textColor="#000"
-            android:textAlignment="center"
-            android:layout_gravity="center_vertical|start"/>
+            android:gravity="center_vertical|start"/>
 
     <ImageButton
             android:layout_width="wrap_content"
