--- a/res/layout/expandable_list_item.xml
+++ b/res/layout/expandable_list_item.xml
@@ -9,6 +9,7 @@
               android:paddingEnd="10dp">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:theme="@style/TextTheme"
               android:id="@+id/exerciseName"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
@@ -18,7 +19,6 @@
               android:ellipsize="marquee"
               android:maxLines="2"
               android:minLines="2"
-              android:textSize="20sp"
               android:textColor="#000" android:layout_weight="5"/>
 
 </LinearLayout>
