--- a/res/layout/expandable_list_item_child.xml
+++ b/res/layout/expandable_list_item_child.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="40dp"
               android:paddingBottom="5dp"
               android:paddingTop="5dp"
               android:textColor="#000"
@@ -11,39 +11,42 @@
               android:background="@color/light_gray_2">
 
     <TextView
+            android:theme="@style/SubTextTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/weight"
-            android:textSize="18sp"
             android:textColor="#000"
+            android:layout_gravity="center_vertical"
     />
 
     <TextView
+            android:theme="@style/SubTextTheme"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:id="@+id/textViewWeight"
             android:hint="@string/kg"
             android:layout_marginStart="5dp"
-            android:textSize="18sp"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:gravity="center_vertical"/>
 
     <TextView
+            android:theme="@style/SubTextTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reiterations"
-            android:textSize="18sp"
             android:textColor="#000"
-
+            android:gravity="center_vertical"
     />
 
     <TextView
+            android:theme="@style/SubTextTheme"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:id="@+id/textViewReiterations"
             android:hint="@string/times"
             android:text="@string/empty_string"
             android:layout_marginStart="5dp"
-            android:textSize="18sp"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:gravity="center_vertical"/>
 
 </LinearLayout>
