--- a/res/layout/expandable_list_item_removable.xml
+++ b/res/layout/expandable_list_item_removable.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="5dp"
               android:paddingBottom="5dp"
@@ -9,25 +9,25 @@
               android:paddingEnd="10dp">
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:theme="@style/TextTheme"
                   android:id="@+id/exerciseName"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="10dp"
-                  android:gravity="center_vertical"
-                  android:text="Название упражнения"
+                  android:gravity="center_vertical|start"
+                  android:text="@string/exercise_name"
                   android:ellipsize="marquee"
                   android:maxLines="2"
                   android:minLines="2"
-                  android:textSize="20sp"
                   android:textColor="#000" android:layout_weight="5"/>
 
         <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="0dp"
                 android:layout_marginEnd="10dp"
-                android:gravity="end"
+                android:gravity="center_vertical|end"
                 android:button="@drawable/check_selector"
                 android:checked="false"
                 android:focusable="false"/>
