--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -9,19 +9,19 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
 
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="@string/help_title"
                 android:id="@+id/textView"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30sp"
                 android:layout_marginStart="20dp" />
     </FrameLayout>
 
@@ -29,15 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical">
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="@string/help_text"
-                  android:textColor="#000"
-                  android:textSize="20sp"
-                  android:layout_marginStart="15dp"
-                  android:layout_marginEnd="10dp"
-                  android:layout_marginTop="20dp"
-                  android:id="@+id/helpText"/>
+        <TextView
+                android:theme="@style/TextTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/help_text"
+                android:textColor="#000"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/helpText"/>
     </LinearLayout>
 
 
