--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,19 +9,19 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
 
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="@string/main_title"
                 android:id="@+id/textView"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30sp"
                 android:layout_marginStart="20dp"/>
 
 
