--- a/res/layout/main_list_item.xml
+++ b/res/layout/main_list_item.xml
@@ -4,8 +4,8 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:paddingStart="6dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="20dp"
         android:paddingEnd="6dp"
         >
 
@@ -23,17 +23,18 @@
             />
 
     <TextView
+            android:theme="@style/TextTheme"
             android:id="@+id/listItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="6dp"
-            android:paddingEnd="6dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:maxLines="2"
+            android:minLines="2"
+            android:ellipsize="marquee"
             android:text="@string/workout_name"
-            android:textSize="20sp"
             android:textColor="#000"
             android:textAlignment="center"
-            android:layout_gravity="start|center_vertical"/>
+            android:gravity="start|center_vertical"/>
 
 </FrameLayout>
