--- a/res/layout/sets_creating.xml
+++ b/res/layout/sets_creating.xml
@@ -9,18 +9,18 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/frameLayout"
             android:background="#ffa500">
 
         <TextView
+                android:theme="@style/TitleTheme"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/title"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30sp"
                 android:text="@string/sets_creating"
                 android:layout_marginStart="20dp"/>
     </FrameLayout>
@@ -35,8 +35,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="15dp"
                 tools:listitem="@layout/sets_creating_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"
