--- a/res/values/styles_apptheme.xml
+++ b/res/values/styles_apptheme.xml
@@ -8,4 +8,18 @@
 	  <item name="android:textColor">#000000</item>
   </style>
 
+    <style name="TitleTheme">
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="TextTheme">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="SubTextTheme">
+        <item name="android:textSize">15sp</item>
+    </style>
+
 </resources>
