--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -29,16 +29,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical">
-        <TextView
-                android:theme="@style/TextTheme"
+        <ScrollView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/help_text"
-                android:textColor="#000"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="20dp"
-                android:id="@+id/helpText"/>
+                android:layout_height="wrap_content">
+            <TextView
+                    android:theme="@style/TextTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="20dp"
+                    android:scrollbars = "vertical"
+                    android:id="@+id/helpText"/>
+        </ScrollView>
     </LinearLayout>
 
 
