--- a/res/layout/expandable_list_item_removable.xml
+++ b/res/layout/expandable_list_item_removable.xml
@@ -24,8 +24,7 @@
         <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:gravity="center_vertical|end"
                 android:button="@drawable/check_selector"
